growi/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: growi
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
