growi/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: growi
spec:
  tls: []
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: growi
                port:
                  name: http
